--- a/cs/apps.html
+++ b/cs/apps.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru" dir="ltr">
+<html lang="cs" dir="ltr">
 
 <head>
   <meta charset="utf-8">
@@ -114,16 +114,16 @@
                       </svg>
                       <span class="close_menu">&#10006;</span>
                   </li>
-                  <li class="nav_list-item"><a class="nav_list-link " href="./../ru/index.html">Главная</a></li>
-						<li class="nav_list-item active"><a class="nav_list-link " href="#">Приложения</a></li>
-						<li class="nav_list-item"><a class="nav_list-link" href="./../ru/downloads.html">Скачать</a></li>
-						<li class="nav_list-item"><a class="nav_list-link" href="./../ru/news.html">Новости</a></li>
-						<li class="nav_list-item"><a class="nav_list-link" href="./../ru/startups.html">Стартапам</a></li>
-						<li class="nav_list-item"><a class="nav_list-link" href="./../ru/investment.html">Инвестиции</a></li>
-						<li class="nav_list-item"><a class="nav_list-link" href="./../ru/team.html">Команда</a></li>
+                  <li class="nav_list-item"><a class="nav_list-link" href="./../cs/index.html">Hlavní</a></li>
+                  <li class="nav_list-item active"><a class="nav_list-link" href="#">Aplikace</a></li>
+                  <li class="nav_list-item"><a class="nav_list-link" href="./../cs/downloads.html">Stáhnout</a></li>
+                  <li class="nav_list-item"><a class="nav_list-link" href="./../cs/news.html">Novinky</a></li>
+                  <li class="nav_list-item"><a class="nav_list-link" href="./../cs/startups.html">Startupy</a></li>
+                  <li class="nav_list-item"><a class="nav_list-link" href="./../cs/investment.html">Investice</a></li>
+                  <li class="nav_list-item"><a class="nav_list-link" href="./../cs/team.html">Tým</a></li>
                   <li class="download_button-tablet">
-                      <a href="https://play.google.com/store/apps/details?id=zone.sfera" class="colorWhite button_download "><img src="/assets/img/buttons/button-image.svg"> Скачать на Android </a>
-                      <a href="https://apps.apple.com/app/sfera-project/id1498046044" class=" colorWhite button_download "><img src="/assets/img/buttons/button-apple.svg" >Скачать на iOS</a>
+                      <a href="https://play.google.com/store/apps/details?id=zone.sfera" class="colorWhite button_download "><img src="/assets/img/buttons/button-image.svg">Stáhnout na Android</a>
+                      <a href="https://apps.apple.com/app/sfera-project/id1498046044" class=" colorWhite button_download "><img src="/assets/img/buttons/button-apple.svg">Stáhnout na IOS</a>
                   </li>
                   <li class="link_tablet-menu" >
                       <a class="menu-links" href="#"><i class="fa-brands fa-youtube fa-xl"></i></a>
@@ -137,11 +137,11 @@
           <div class="langs">
               <img src="../assets/img/language_24px.svg" alt="">
               <ul class="langs__list">
-                  <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">RU</a>
+                  <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">CS</a>
                       <div class="dropdown-menu__content langs__submenu">
                           <ul class="langs__list">
                               <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../en/apps.html">EN</a></li>
-                              <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../cs/apps.html">CS</a></li>
+                              <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../ru/apps.html">RU</a></li>
                           </ul>
                       </div>
                   </li>
@@ -186,9 +186,11 @@
                                 <p class="apps__subapps-list-item-title">Videos</p>
                             </a></li>
                         <li class="apps__subapps-list-item"><a class="apps__subapps-list-item-link link" href="#joblite"><img src="../assets/img/apps/icon-job_lite.svg" class="apps__subapps-list-item-icon" />
-                            <p class="apps__subapps-list-item-title">Job Lite</p></a></li>
+                                <p class="apps__subapps-list-item-title">Job Lite</p>
+                            </a></li>
                         <li class="apps__subapps-list-item"><a class="apps__subapps-list-item-link link" href="#findfriend"><img  src="../assets/img/apps/icon-find_friends.svg" class="apps__subapps-list-item-icon" />
-                          <p class="apps__subapps-list-item-title">Find Friends</p></a></li>
+                                <p class="apps__subapps-list-item-title">Find Friends</p>
+                            </a></li>
                     </ul>
                 </div>
             </div>
@@ -196,6 +198,7 @@
         <section class="section apps__briefs">
             <div class="section__wrapper">
                 <ul class="apps__briefs-list">
+
                     <li class="apps__briefs-item">
                       <div class="apps__brief-images-container"id="profile">
                         <div class="apps__brief-image-wrapper" ><img src="../assets/img/apps/profile_ios.png" class="apps__brief-image" alt="Главный профиль айфон" /></div>
@@ -217,6 +220,7 @@
                           <li></li>
                         </ul>
                     </li>
+
                     <li class="apps__briefs-item"  id="lenta">
                       <div class="apps__brief-images-container">
                         <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/lenta_ios.png" class="apps__brief-image" alt="Лента новостей айфон" /></div>
@@ -238,6 +242,7 @@
                           <li></li>
                         </ul>
                     </li>
+
                     <li class="apps__briefs-item"  id="asap">
                       <div class="apps__brief-images-container">
                         <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/asap_ios.png" class="apps__brief-image" alt="Мессенджер айфон" /></div>
@@ -259,6 +264,7 @@
                           <li></li>
                         </ul>
                     </li>
+
                     <li class="apps__briefs-item" id="meetnet">
                       <div class="apps__brief-images-container">
                         <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/meetnet_ios.png" class="apps__brief-image" alt="сервис для знакомств айфон" /></div>
@@ -270,16 +276,17 @@
                         </div>
                         <ul class="apps__briefs-item-list">
                           <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li class="apps__briefs-item-list-color"></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li class="apps__briefs-item-list-color"></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
                         </ul>
                     </li>
+
                     <li class="apps__briefs-item"id="choose">
                       <div class="apps__brief-images-container">
                         <div class="apps__brief-images-container">
@@ -293,16 +300,17 @@
                         </div>
                         <ul class="apps__briefs-item-list">
                           <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li class="apps__briefs-item-list-color"></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li class="apps__briefs-item-list-color"></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
                         </ul>
                     </li>
+
                     <li class="apps__briefs-item"id="blackbox">
                       <div class="apps__brief-images-container">
                         <div class="apps__brief-images-container">
@@ -316,17 +324,18 @@
                         </div>
                         <ul class="apps__briefs-item-list">
                           <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li class="apps__briefs-item-list-color"></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li class="apps__briefs-item-list-color"></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
                         </ul>
                     </li>
+
                     <li class="apps__briefs-item" id="videos">
                       <div class="apps__brief-images-container">
                         <div class="apps__brief-images-container">
@@ -340,14 +349,14 @@
                         </div>
                         <ul class="apps__briefs-item-list">
                           <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li class="apps__briefs-item-list-color"></li>
-                          <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li class="apps__briefs-item-list-color"></li>
+                        <li></li>
                         </ul>
                     </li>
 
@@ -364,15 +373,15 @@
                         </div>
                         <ul class="apps__briefs-item-list">
                           <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li class="apps__briefs-item-list-color"></li>
-                          <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li class="apps__briefs-item-list-color"></li>
+                        <li></li>
                         </ul>
                     </li>
 
