--- a/cs/investment.html
+++ b/cs/investment.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru" dir="ltr">
+<html lang="cs" dir="ltr">
 
 <head>
   <meta charset="utf-8">
@@ -111,13 +111,13 @@
             </svg>
             <span class="close_menu">&#10006;</span>
           </li>
-          <li class="nav_list-item "><a class="nav_list-link " href="../ru/index.html">Главная</a></li>
-          <li class="nav_list-item"><a class="nav_list-link " href="../ru/apps.html">Приложения</a></li>
-          <li class="nav_list-item"><a class="nav_list-link" href="../ru/downloads.html">Скачать</a></li>
-          <li class="nav_list-item"><a class="nav_list-link" href="../ru/news.html">Новости</a></li>
-          <li class="nav_list-item"><a class="nav_list-link" href="../ru/startups.html">Стартапам</a></li>
-          <li class="nav_list-item active"><a class="nav_list-link" href="../ru/investment.html">Инвестиции</a></li>
-          <li class="nav_list-item"><a class="nav_list-link" href="../ru/team.html">Команда</a></li>
+          <li class="nav_list-item"><a class="nav_list-link " href="./../cs/index.html">Hlavní</a></li>
+          <li class="nav_list-item"><a class="nav_list-link" href="#">Aplikace</a></li>
+          <li class="nav_list-item"><a class="nav_list-link" href="./../cs/downloads.html">Stáhnout</a></li>
+          <li class="nav_list-item"><a class="nav_list-link" href="./../cs/news.html">Novinky</a></li>
+          <li class="nav_list-item"><a class="nav_list-link" href="./../cs/startups.html">Startupy</a></li>
+          <li class="nav_list-item active"><a class="nav_list-link" href="./../cs/investment.html">Investice</a></li>
+          <li class="nav_list-item"><a class="nav_list-link" href="./../cs/team.html">Tým</a></li>
           <li class="download_button-tablet">
             <a href="https://play.google.com/store/apps/details?id=zone.sfera" class="colorWhite button_download "><img src="assets/img/buttons/button-image.svg"> Скачать на Android </a>
             <a href="https://apps.apple.com/app/sfera-project/id1498046044" class=" colorWhite button_download "><img src="assets/img/buttons/button-apple.svg" >Скачать на iOS</a>
@@ -134,17 +134,18 @@
       <div class="langs">
         <img src="../assets/img/language_24px.svg" alt="">
         <ul class="langs__list">
-          <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">RU</a>
+          <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">CS</a>
             <div class="dropdown-menu__content langs__submenu">
               <ul class="langs__list">
                 <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../en/investment.html">EN</a></li>
-                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../cs/investment.html">CS</a></li>
+                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../ru/investment.html">RU</a></li>
               </ul>
             </div>
           </li>
         </ul>
       </div>
     </nav>
+
     <main>
       <div class="investment">
         <div class="investment__wrapper">
@@ -167,15 +168,17 @@
       <section>
         <div class="card__wrapper">
           <div class="card">
-            <div class="card__column">
-              <img class="card__image-center" src="../assets/img/investment/investment_card.png" alt="Банковская картка" />
+           <div class="card__column">
+            <img class="card__image-center" src="../assets/img/investment/investment_card.png" alt="Банковская картка" />
           </div>
         <div class="card__column">
           <div class="card-body">
             <div class="card-body-content">
               <ol class="card-body__link">
                 <li class="card-body__list_1"> Скопируйте номер карты и отправьте желаемую сумму.</li>
+
                 <p id="card-body__list_2" class="card-body__list_2" type="text" >4584-4328-3958-7574<button onclick="copyText()" class="card-body__list_copy"><img src="../assets/img/investment/content_copy.svg" alt="img"></button></p>
+
                 <li class="card-body__list_3"> Отправьте E-mail, указав сумму перевода. Обратным письмом мы подтвердим отправленную вами сумму и привязку её к вашему E-mail.</li>
                 <div class="card-body__list_4">invest@sfera.zone <button onclick="copyTextTwo()" class="card-body__list_copy" ><img src="../assets/img/investment/content_copy.svg" alt=""></button></div>
               </ol>
@@ -184,7 +187,8 @@
           </div>
         </div>
       </div>
-    </div>
+      
+      </div>
     </section>
     <section class="sfera">
       <div class="sfera__wrapper">
@@ -202,6 +206,8 @@
         </div>
       </div>
     </section>
+      
+
       <section class="venchur">
         <div class="venchur__wrapper">
           <div class="venchur-body">
@@ -220,6 +226,7 @@
         </div>
       </section>
       <section class="sfera-2">
+
         <div class="venchur__wrapper">
           <div class="venchur-body">
             <div class="venchur-body-content">
