--- a/cs/startups.html
+++ b/cs/startups.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru" dir="ltr">
+<html lang="cs" dir="ltr">
 
 <head>
   <meta charset="utf-8">
@@ -10,14 +10,16 @@
   <link rel="icon" href="assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
   <title>SFERA</title>
   <link href="../assets/css/main.e1ae0bf9.css" rel="stylesheet">
-  
-  <link href="../assets/css/invest.css" rel="stylesheet">
+
+  <link href="../assets/css/startups.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="../assets/css/header.css">
   <link rel="stylesheet" href="https://kit.fontawesome.com/d455f88091.css" crossorigin="anonymous">
 </head>
+
 <body>
   <div class="page">
+
     <nav class="nav_menu">
       <input type="checkbox" class="myCheckBox" id="myCheck">
       <label for="myCheck" class="checkButton">
@@ -111,16 +113,16 @@
             </svg>
             <span class="close_menu">&#10006;</span>
           </li>
-          <li class="nav_list-item "><a class="nav_list-link " href="../ru/index.html">Главная</a></li>
-          <li class="nav_list-item"><a class="nav_list-link " href="../ru/apps.html">Приложения</a></li>
-          <li class="nav_list-item"><a class="nav_list-link" href="../ru/downloads.html">Скачать</a></li>
-          <li class="nav_list-item"><a class="nav_list-link" href="../ru/news.html">Новости</a></li>
-          <li class="nav_list-item"><a class="nav_list-link" href="../ru/startups.html">Стартапам</a></li>
-          <li class="nav_list-item active"><a class="nav_list-link" href="../ru/investment.html">Инвестиции</a></li>
-          <li class="nav_list-item"><a class="nav_list-link" href="../ru/team.html">Команда</a></li>
+          <li class="nav_list-item"><a class="nav_list-link " href="./../cs/index.html">Hlavní</a></li>
+                  <li class="nav_list-item"><a class="nav_list-link " href="#">Aplikace</a></li>
+                  <li class="nav_list-item"><a class="nav_list-link" href="./../cs/downloads.html">Stáhnout</a></li>
+                  <li class="nav_list-item"><a class="nav_list-link" href="./../cs/news.html">Novinky</a></li>
+                  <li class="nav_list-item active"><a class="nav_list-link" href="./../cs/startups.html">Startupy</a></li>
+                  <li class="nav_list-item"><a class="nav_list-link" href="./../cs/investment.html">Investice</a></li>
+                  <li class="nav_list-item"><a class="nav_list-link" href="./../cs/team.html">Tým</a></li>
           <li class="download_button-tablet">
-            <a href="https://play.google.com/store/apps/details?id=zone.sfera" class="colorWhite button_download "><img src="assets/img/buttons/button-image.svg"> Скачать на Android </a>
-            <a href="https://apps.apple.com/app/sfera-project/id1498046044" class=" colorWhite button_download "><img src="assets/img/buttons/button-apple.svg" >Скачать на iOS</a>
+            <a href="https://play.google.com/store/apps/details?id=zone.sfera" class="colorWhite button_download "><img src="/assets/img/buttons/button-image.svg"> Скачать на Android </a>
+            <a href="https://apps.apple.com/app/sfera-project/id1498046044" class=" colorWhite button_download "><img src="/assets/img/buttons/button-apple.svg" >Скачать на iOS</a>
           </li>
           <li class="link_tablet-menu" >
             <a class="menu-links" href="#"><i class="fa-brands fa-youtube fa-xl"></i></a>
@@ -134,107 +136,66 @@
       <div class="langs">
         <img src="../assets/img/language_24px.svg" alt="">
         <ul class="langs__list">
-          <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">RU</a>
+          <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">CS</a>
             <div class="dropdown-menu__content langs__submenu">
               <ul class="langs__list">
-                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../en/investment.html">EN</a></li>
-                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../cs/investment.html">CS</a></li>
+                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../en/startups.html">EN</a></li>
+                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../ru/startups.html">RU</a></li>
               </ul>
             </div>
           </li>
         </ul>
       </div>
     </nav>
+
+
     <main>
-      <div class="investment">
-        <div class="investment__wrapper">
-          <div class="investment-body">
-            <div class="investment-body-content">
-              <h1 class="investment-body__title">приглашаем <span class="investment-body__title_color">инвесторов</span></h1>
-              <p class="investment-body__text">На данный момент финансирование проекта осуществляется засчёт собственных средств и средств инвесторов.</p>
-              <p class="investment-body__text">Наша главная цель в работе с инвесторами — это Х100 для инвесторов</p>
-              <ul class="lead__download-links-list">
-                <li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="lead__download-link button button_theme_dark button_type_android">Скачать на Android </a></li>
-                <li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="lead__download-link button button_theme_dark button_type_ios button_type_ios-invest">Скачать на iOS</a></li>
-              </ul>
+      <section class="section__startups">
+        <div class="startups__wrapper">
+          <div class="lead">
+            <div class="lead__texts">
+              <h1 class="lead__title">приглашаем<br><span class="lead__title-color">стартапы</span></h1>
+              <p class="lead__text">Для действующих стартапов, которые находятся на</br> стадии разработки или уже  имеют работающий </br>функционал мы готовы  рассмотреть вопрос интеграции</br> в SFERA, при соблюдении следующих условий.</p>
+              <div class="lead__links-container apps__lead-links-container">
+                <ul class="lead__download-links-list">
+                  <li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="lead__download-link button button_theme_dark button_type_android">Скачать на Android </a></li>
+									<li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="lead__download-link button button_theme_dark button_type_ios">Скачать на iOS</a></li>
+                </ul>
+              </div>
             </div>
-            <div class="investment__column">
-              <img class="investment__image ibg" src="../assets/img/investment/Graphite.png" alt="Телефон айфон Инвестиции">
-            </div>
-          </div>
-        </div>
-      </div>
-      <section>
-        <div class="card__wrapper">
-          <div class="card">
-            <div class="card__column">
-              <img class="card__image-center" src="../assets/img/investment/investment_card.png" alt="Банковская картка" />
-          </div>
-        <div class="card__column">
-          <div class="card-body">
-            <div class="card-body-content">
-              <ol class="card-body__link">
-                <li class="card-body__list_1"> Скопируйте номер карты и отправьте желаемую сумму.</li>
-                <p id="card-body__list_2" class="card-body__list_2" type="text" >4584-4328-3958-7574<button onclick="copyText()" class="card-body__list_copy"><img src="../assets/img/investment/content_copy.svg" alt="img"></button></p>
-                <li class="card-body__list_3"> Отправьте E-mail, указав сумму перевода. Обратным письмом мы подтвердим отправленную вами сумму и привязку её к вашему E-mail.</li>
-                <div class="card-body__list_4">invest@sfera.zone <button onclick="copyTextTwo()" class="card-body__list_copy" ><img src="../assets/img/investment/content_copy.svg" alt=""></button></div>
-              </ol>
-              <div class="card-body__text">Осуществляя перевод, вы подтверждаете, что четко понимаете основы и понятия венчурного инвестирования и принципов работы стартапа, а также все риски, связанные с этим.</div>
+            <div class="lead__images">
+              <img src="../assets/img/startups-png/iphone_12_pro.png" class="lead__image" alt="Айфон про сфера" /></div>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
     </section>
-    <section class="sfera">
-      <div class="sfera__wrapper">
-        <div class="sfera__column">
-          <div class="sfera-body">
-            <div class="sfera-body-content">
-              <h2 class="sfera-body__uptext">подтверждение инвестиций</h2>
-              <p class="sfera-body__downtext">На данном этапе мы не можем четко сказать, как и когда инвестор получит документальное подтверждение. Но это точно произойдёт. Возможны два варианта:</p>
-              <ul class="sfera-body__link">
-                <li class="sfera-body__list">подписание опционов с последующим переводом в акции;</li>
-                <li class="sfera-body__list">предоставление токенов.</li>
-              </ul>
+    <section class="description">
+        <div class="description__wrapper">
+          <div class="description__list__main">
+            <div class="description__list__items">
+              <h2 class="description__list__heading">условия сотрудничества</h2>
+              <ol class="description__list">
+                <li class="description__list__paragraf">Сервис должен быть полезным </br> (развивающим) и оказывать позитивное </br> влияние на оффлайн-жизнь </br> пользователя.</li>
+                <li class="description__list__paragraf">У вас есть проработанный макет и </br> концепция (включая полную прорисовку </br> сервиса в Figma, техническое описание- </br> задание), но нет финансовой </br> возможности реализовать сервис.</li>
+              </ol>
+              <h2 class="description__list__heading">преимущества</h2>
+              <ol class="description__list">  
+                <li class="description__list__paragraf">Разработка сервиса в рамках SFERA,</br> обходится в разы дешевле, чем создание </br> отдельного приложения.</li>
+                <li class="description__list__paragraf">Вы остаетесь правообладателем своего </br> сервиса и SFERA никак не может и не </br> будет претендовать на Ваш сервис за </br> пределами платформы.</li>
+              </ol>
             </div>
           </div>
+        </div>
+    </section>
+    <section class="frame">
+      <div class="frame__wrapper">
+        <div class="frame__list__main">
+          <ul  class="frame__list">
+            <li class="frame__list__item"><img class="frame__list__image" src="../assets/img/startups-png/sfera.png" alt="Приложение сфера " /></li>
+            <li class="frame__list__item">Мы считаем, что многие сервисы, безусловно полезны и нужны пользователям, но зачастую, из - за высокой стоимости разработки или затрат на привлечение пользователя, реализация проектов становится невозможной. В рамках проекта  SFERA, в несколько раз снижается стоимость разработки и нет необходимости нести финансовые расходы на маркетинг.</li>
+          </ul>
         </div>
       </div>
     </section>
-      <section class="venchur">
-        <div class="venchur__wrapper">
-          <div class="venchur-body">
-            <div class="venchur-body-content">
-              <h2 class="venchur-body__title">Что такое венчурные инвестиции</h2>
-              <p class="venchur-body__undertitle">В книге «Как вдохнуть в бизнес новую жизнь. PIXAR» Лоуренс Леви писал:</p>
-              <ul class="venchur-body__link">
-                <li class="venchur-body-list">Стартапы держались вместе засчет возможности для их основателей и сотрудников делить трофеи. Это было одной из самых главных побудительных мер присоединиться к крайне рискованному<span id="dots">...</span> <span id="more">
-                предприятию, а не к более стабильной компании. Механизмом участия в успехе стартапа был опцион на покупку акций — бумажного обязательства, ставшего валютой Кремниевой долины. Опционы на акции превратили Кремневую долину в современный аналог золотой лихорадки.
-                Опцион на акции дает сотруднику возможность в будущем приобретать акции в компании. Его ценность состоит в том, что сотрудник не должен платить за акции сразу, но цена, которую он заплатит в свое время, устанавливается в тот момент, когда сотрудник получает этот опцион, обычно тогда, когда он или она приходит на работу в компанию. Если компания становится очень успешной после того, как человек пришел туда работать, ценность акций может вырасти до астрономических сумм, но сотрудник заплатит именно ту сумму, которая была установлена в момент получения опциона. Остальное — его прибыль. Например, если акция компании на момент поступления человека стоит 1 доллар за штуку и если он получает опцион на покупку тысячи акций, пять лет спустя, если акции стоят по 100 долларов за штуку, человек все равно заплатит за них по 1 доллару. Он или она получит 99 долларов прибыли за каждую акцию, или 99 тысяч долларов прибыли. Именно так Кремниевая долина рождает на свет новых миллионеров и миллиардеров.
-                </span></li>
-                <a id="btn" onclick="readMore()">Читать больше</a>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="sfera-2">
-        <div class="venchur__wrapper">
-          <div class="venchur-body">
-            <div class="venchur-body-content">
-              <h3 class="venchur__title">Не делайте этого, если:</h3>
-              <ol class="venchur__link">
-                <li class="venchur-list">Считаете, что это обман.</li>
-                <li class="venchur-list">Не верите в проект.</li>
-                <li class="venchur-list">Выделяемая сумма для вас значима.</li>
-                <li class="venchur-list">Вы не понимаете основ инвестирования в стартапы.</li>
-              </ol>
-              <div class="venchur__downtext">Гарантией выполнения наших обязательств является репутация компании сейчас и в будущем.</div>
-            </div>
-          </div>
-        </div>
-      </section>
     </main>
     <footer class="footer section section_theme_dark" role="footer">
       <div class="footer__container">
@@ -249,7 +210,7 @@
         </div>
         <div class="footer__download-links">
           <h2 class="footer__title color_grey">Мы не будем менять мир.<br> 
-    Мы перепишем код.</h2>
+Мы перепишем код.</h2>
           <ul class="footer__download-links-list">
             <li class="footer__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="footer__download-link button button_theme_dark button_type_android">Скачать на Android </a></li>
             <li class="footer__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="footer__download-link button button_theme_dark button_type_ios">Скачать на iOS</a></li>
@@ -273,7 +234,7 @@
     </footer>
   </div>
   <script src="https://kit.fontawesome.com/d455f88091.js" crossorigin="anonymous"></script>
-  <script src="../assets/js/invest.js"></script>
+  <script src="assets/js/main.3.ddda2f0e.js" defer></script>
   <script src="../assets/js/main.js"></script>
 </body>
 
