--- a/cs/team.html
+++ b/cs/team.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru" dir="ltr">
+<html lang="cs" dir="ltr">
 
 <head>
     <meta charset="utf-8">
@@ -112,12 +112,13 @@
                         </svg>
                         <span class="close_menu">&#10006;</span>
                     </li>
-                    <li class="nav_list-item "><a class="nav_list-link " href="../ru/index.html">Главная</a></li>
-                    <li class="nav_list-item"><a class="nav_list-link " href="../ru/apps.html">Приложения</a></li>
-                    <li class="nav_list-item"><a class="nav_list-link" href="../ru/downloads.html">Скачать</a></li>
-                    <li class="nav_list-item"><a class="nav_list-link" href="../ru/news.html">Новости</a></li>
-                    <li class="nav_list-item"><a class="nav_list-link" href="../ru/startups.html">Стартапам</a></li>
-                    <li class="nav_list-item"><a class="nav_list-link" href="../ru/investment.html">Инвестиции</a></li>
+                    <li class="nav_list-item"><a class="nav_list-link " href="./../cs/index.html">Hlavní</a></li>
+                    <li class="nav_list-item"><a class="nav_list-link " href="#">Aplikace</a></li>
+                    <li class="nav_list-item"><a class="nav_list-link" href="./../cs/downloads.html">Stáhnout</a></li>
+                    <li class="nav_list-item"><a class="nav_list-link" href="./../cs/news.html">Novinky</a></li>
+                    <li class="nav_list-item"><a class="nav_list-link" href="./../cs/startups.html">Startupy</a></li>
+                    <li class="nav_list-item"><a class="nav_list-link" href="./../cs/investment.html">Investice</a></li>
+                    <li class="nav_list-item"><a class="nav_list-link" href="./../cs/team.html">Tým</a></li>
                     <li class="nav_list-item active"><a class="nav_list-link" href="#">Команда</a></li>
                     <li class="download_button-tablet">
                         <a href="https://play.google.com/store/apps/details?id=zone.sfera" class="colorWhite button_download "><img src="/assets/img/buttons/button-image.svg"> Скачать на Android </a>
@@ -135,11 +136,11 @@
             <div class="langs">
                 <img src="../assets/img/language_24px.svg" alt="">
                 <ul class="langs__list">
-                    <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">RU</a>
+                    <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">CS</a>
                         <div class="dropdown-menu__content langs__submenu">
                             <ul class="langs__list">
                                 <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../en/team.html">EN</a></li>
-                                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../cs/team.html">CS</a></li>
+                                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../ru/team.html">RU</a></li>
                             </ul>
                         </div>
                     </li>
