--- a/en/team.html
+++ b/en/team.html
@@ -137,7 +137,7 @@
                 <div class="dropdown-menu__content langs__submenu">
                   <ul class="langs__list">
                     <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../ru/team.html">RU</a></li>
-                    <li class="langs__item"> <a class="langs__link  button_theme_dark" href="#">CS</a></li>
+                    <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../cs/team.html">CS</a></li>
                   </ul>
     
                 </div>
@@ -349,9 +349,9 @@
                 <p class="footer__copyright-text"><a class="link link_theme_dark" href="#">SFERA position</a></p>
                 <p class="footer__copyright-text">© Copyright 2019-2022 <a class="link link_theme_dark" href="https://sfera.zone">https://sfera.zone</a> — SFERA Project | All rights reserved by SPHERE LLC</p>
               </div>
-            </div></footer>
-  </div>
-
+            </div>
+          </footer>
+      </div>
     <script src="https://kit.fontawesome.com/d455f88091.js" crossorigin="anonymous"></script>
     <script src="../assets/js/main.js"></script>
 </body>
