--- a/en/apps.html
+++ b/en/apps.html
@@ -19,7 +19,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="../assets/css/header.css">
   <link rel="stylesheet" href="https://kit.fontawesome.com/d455f88091.css" crossorigin="anonymous">
-
 </head>
 <body>
   <div class="page">
@@ -142,7 +141,7 @@
             <div class="dropdown-menu__content langs__submenu">
               <ul class="langs__list">
                 <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../ru/apps.html">RU</a></li>
-                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="#">CS</a></li>
+                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../cs/apps.html">CS</a></li>
               </ul>
 
             </div>
@@ -537,7 +536,7 @@
           <p class="footer__copyright-text">© Copyright 2019-2022 <a class="link link_theme_dark" href="https://sfera.zone">https://sfera.zone</a> — SFERA Project | All rights reserved by SPHERE LLC</p>
         </div>
       </div></footer>
-  <!-- </div> -->
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="../assets/js/apps.js"></script>
   <script src="https://kit.fontawesome.com/d455f88091.js" crossorigin="anonymous"></script>
