--- a/en/downloads.html
+++ b/en/downloads.html
@@ -113,7 +113,7 @@
           <span class="close_menu">&#10006;</span>
         </li>
         <li class="nav_list-item"><a class="nav_list-link" href="../index.html">SFERA Project</a></li>
-        <li class="nav_list-item"><a class="nav_list-link" href="./en/apps.html">Applications</a></li>
+        <li class="nav_list-item"><a class="nav_list-link" href="./../en/apps.html">Applications</a></li>
         <li class="nav_list-item active"><a class="nav_list-link" href="./../en/downloads.html">Download SFERA</a></li>
         <li class="nav_list-item"><a class="nav_list-link" href="./../en/news.html">News</a></li>
         <li class="nav_list-item"><a class="nav_list-link" href="./../en/startups.html">Startups</a></li>
@@ -138,7 +138,7 @@
             <div class="dropdown-menu__content langs__submenu">
               <ul class="langs__list">
                 <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../ru/downloads.html">RU</a></li>
-                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="#">CS</a></li>
+                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../cs/downloads.html">CS</a></li>
               </ul>
 
             </div>
@@ -177,7 +177,7 @@
         </div>
       </section>
     </main>
-
+  </div>
     <!-- <footer class="footer section section_theme_dark" role="footer">
       <div class="footer__container">
         <div class="footer__contacts">
