--- a/en/investment.html
+++ b/en/investment.html
@@ -137,7 +137,7 @@
             <div class="dropdown-menu__content langs__submenu">
               <ul class="langs__list">
                 <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../ru/investment.html">RU</a></li>
-                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="#">CS</a></li>
+                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../cs/investment.html">CS</a></li>
               </ul>
 
             </div>
