--- a/index.html
+++ b/index.html
@@ -134,24 +134,20 @@
 					</li>
 				</ul>
 				<div class="langs">
-					<img src="../assets/img/language_24px.svg" alt="">
+					<img src="assets/img/language_24px.svg" alt="">
 					<ul class="langs__list">
 						<li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">EN</a>
 							<div class="dropdown-menu__content langs__submenu">
 								<ul class="langs__list">
 									<li class="langs__item"> <a class="langs__link  button_theme_dark" href="./ru/index.html">RU</a></li>
-									<li class="langs__item"> <a class="langs__link  button_theme_dark" href="#">CS</a></li>
+									<li class="langs__item"> <a class="langs__link  button_theme_dark" href="./cs/index.html">CS</a></li>
 								</ul>
-
 							</div>
 						</li>
 					</ul>
-
 				</div>
 			</nav>
-
 			<main>
-
 			<section class="section__landing">
 				<div class="section-first">
 					<ul class="list-left">
@@ -166,7 +162,6 @@
 							<li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="lead__download-link button button_theme_dark button_type_android">Download on Android </a></li>
 							<li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="lead__download-link button button_theme_dark button_type_ios">Download on iOS</a></li>
 						</ul>
-
 					</ul>
 				</li>
 				<div class="section-block-one">
@@ -210,7 +205,6 @@
 					<span ><img class="block-for-image-two" src="assets/image-lending/1920/block 3-2.png" alt="Download the app for android"></span>
 				</div>
 			</section>
-			
 		<section class="section-card">
 			<p class="about-as-heading">WHAT’S OUT <span class="about-as-heading-color"> THERE RIGHT NOW</span></p>
 			<div class="card">
@@ -231,7 +225,6 @@
 					</div>
 					<p class="card-block-botton">Multifunctional messenger</p>
 				</div>
-
 				<div class="card-block">
 					<button class="card-block-top">Profile</button>
 					<div class="product-inner">
@@ -249,7 +242,6 @@
 					</div>
 					<p class="card-block-botton">Personal page with personal information</p>
 				</div>
-
 				<div class="card-block">
 					<button class="card-block-top">Feed</button>
 					<div class="product-inner">
@@ -267,7 +259,6 @@
 					</div>
 					<p class="card-block-botton">News Feed with educational content</p>
 				</div>
-
 				<div class="card-block">
 					<button class="card-block-top">VideoS</button>
 					<div class="product-inner">
@@ -285,7 +276,6 @@
 					</div>
 					<p class="card-block-botton">Short videos with useful content</p>
 				</div>
-
 				<div class="card-block">
 					<button class="card-block-top">BlackBox</button>
 					<div class="product-inner">
@@ -303,7 +293,6 @@
 					</div>
 					<p class="card-block-botton">Communication search service based on geolocation</p>
 				</div>
-
 				<div class="card-block">
 					<button class="card-block-top">FindFriends</button>
 					<div class="product-inner">
@@ -321,7 +310,6 @@
 					</div>
 					<p class="card-block-botton">Finding Friends In offline life</p>
 				</div>
-
 				<div class="card-block">
 					<button class="card-block-top">MeetNet</button>
 					<div class="product-inner">
@@ -339,7 +327,6 @@
 					</div>
 					<p class="card-block-botton">Sub-Application for dating and finding beloved one</p>
 				</div>
-
 				<div class="card-block">
 					<button class="card-block-top">JobLite</button>
 					<div class="product-inner">
@@ -357,7 +344,6 @@
 					</div>
 					<p class="card-block-botton">Search platform for jobs and employees</p>
 				</div>
-
 				<div class="card-block">
 					<button class="card-block-top">Choose</button>
 					<div class="product-inner">
@@ -376,11 +362,10 @@
 					<p class="card-block-botton">Tough choice? Askadvice from other users</p>
 				</div>
 				<div class="card-block card-block-botton">
-					<a class="card-block__link"  href="./ru/apps.html">SFERA Applications &#8702; </a>
+					<a class="card-block__link"  href="./en/apps.html">SFERA Applications &#8702; </a>
 				</div>
 			</div>
 		</section> 
-
 		<section class="block-seven" id="download">
 				<article>
 					<img src="./assets/image-lending/1920/logosfera.gif" alt="image sfera" class="block-seven-image">
@@ -461,7 +446,6 @@
 						<img class="block-eight-card-image" src="./assets/image-lending/general/7.png" alt="Holy Book">
 						<p class="block-eight-card-list-paragraf">Holy Book</p>
 					</li>
-
 				</ul>
 			</section>
 		</main>
@@ -496,7 +480,8 @@
           <p class="footer__copyright-text"><a class="link link_theme_dark" href="#">SFERA position</a></p>
           <p class="footer__copyright-text">© Copyright 2019-2022 <a class="link link_theme_dark" href="https://sfera.zone">https://sfera.zone</a> — SFERA Project | All rights reserved by SPHERE LLC</p>
         </div>
-      </div></footer>
+      </div>
+		</footer>
 			<script src="https://kit.fontawesome.com/d455f88091.js" crossorigin="anonymous"></script>
 			<script src="./assets/js/index.js"></script>
 			<script src="./assets/js/main.js"></script>
