--- a/ru/index.html
+++ b/ru/index.html
@@ -131,7 +131,6 @@
 						</li>
 					</ul>
 				</div>
-
 				<div class="langs">
 					<img src="../assets/img/language_24px.svg" alt="">
 					<ul class="langs__list">
@@ -139,7 +138,7 @@
 							<div class="dropdown-menu__content langs__submenu">
 								<ul class="langs__list">
 									<li class="langs__item"> <a class="langs__link  button_theme_dark" href="../index.html">EN</a></li>
-									<li class="langs__item"> <a class="langs__link  button_theme_dark" href="#">CS</a></li>
+									<li class="langs__item"> <a class="langs__link  button_theme_dark" href="../cs/index.html">CS</a></li>
 								</ul>
 
 							</div>
@@ -148,9 +147,7 @@
 
 				</div>
 			</nav>
-
 			<main>
-
 			<section class="section__landing">
 				<div class="section-first">
 					<ul class="list-left">
@@ -165,7 +162,6 @@
 							<li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="lead__download-link button button_theme_dark button_type_android">Скачать на Android </a></li>
 							<li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="lead__download-link button button_theme_dark button_type_ios">Скачать на iOS</a></li>
 						</ul>
-
 					</ul>
 				</li>
 				<div class="section-block-one">
@@ -208,7 +204,6 @@
 					<span ><img class="block-for-image-two" src="../assets/image-lending/1920/block 3-2.png" alt="Скачать приложение на андроид"></span>
 				</div>
 			</section>
-			
 		<section class="section-card">
 			<p class="about-as-heading">ЧТО ЕСТЬ <span class="about-as-heading-color"> УЖЕ СЕЙЧАС</span></p>
 			<div class="card">
@@ -229,7 +224,6 @@
 					</div>
 					<p class="card-block-botton">Мультифункциональный мессенджер</p>
 				</div>
-
 				<div class="card-block">
 					<button class="card-block-top">Профиль</button>
 					<div class="product-inner">
@@ -247,7 +241,6 @@
 					</div>
 					<p class="card-block-botton">Личная страница с персональной информацией</p>
 				</div>
-
 				<div class="card-block">
 					<button class="card-block-top">Лента</button>
 					<div class="product-inner">
@@ -265,7 +258,6 @@
 					</div>
 					<p class="card-block-botton">Новостная лента с развивающим контентом</p>
 				</div>
-
 				<div class="card-block">
 					<button class="card-block-top">VideoS</button>
 					<div class="product-inner">
@@ -283,7 +275,6 @@
 					</div>
 					<p class="card-block-botton">Короткие видео с полезным контентом</p>
 				</div>
-
 				<div class="card-block">
 					<button class="card-block-top">BlackBox</button>
 					<div class="product-inner">
@@ -301,7 +292,6 @@
 					</div>
 					<p class="card-block-botton">Сервис поиска общения по геолокации</p>
 				</div>
-
 				<div class="card-block">
 					<button class="card-block-top">FindFriends</button>
 					<div class="product-inner">
@@ -319,7 +309,6 @@
 					</div>
 					<p class="card-block-botton">Поиск друзей в оффлайн жизни</p>
 				</div>
-
 				<div class="card-block">
 					<button class="card-block-top">MeetNet</button>
 					<div class="product-inner">
@@ -337,7 +326,6 @@
 					</div>
 					<p class="card-block-botton">Подприложение для знакомств и поиска второй половинки</p>
 				</div>
-
 				<div class="card-block">
 					<button class="card-block-top">JobLite</button>
 					<div class="product-inner">
@@ -355,7 +343,6 @@
 					</div>
 					<p class="card-block-botton">Платформа для поиска вакансий и сотрудников</p>
 				</div>
-
 				<div class="card-block">
 					<button class="card-block-top">Choose</button>
 					<div class="product-inner">
@@ -378,7 +365,6 @@
 				</div>
 			</div>
 		</section> 
-
 		<section class="block-seven" id="download">
 				<article>
 					<img src="../assets/image-lending/1920/logosfera.gif" alt="image sfera" class="block-seven-image">
@@ -461,7 +447,6 @@
 						<img class="block-eight-card-image" src="../assets/image-lending/general/7.png" alt="">
 						<p class="block-eight-card-list-paragraf">Holy Book</p>
 					</li>
-
 				</ul>
 			</section>
 		</main>
@@ -477,8 +462,7 @@
           </ul>
         </div>
         <div class="footer__download-links">
-          <h2 class="footer__title color_grey">Мы не будем менять мир.<br> 
-Мы перепишем код.</h2>
+          <h2 class="footer__title color_grey">Мы не будем менять мир.<br> Мы перепишем код.</h2>
           <ul class="footer__download-links-list">
             <li class="footer__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="footer__download-link button button_theme_dark button_type_android">Скачать на Android </a></li>
             <li class="footer__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="footer__download-link button button_theme_dark button_type_ios">Скачать на iOS</a></li>
@@ -500,6 +484,7 @@
         </div>
       </div>
     </footer>
+		</div>
 			<script src="https://kit.fontawesome.com/d455f88091.js" crossorigin="anonymous"></script>
 			<script src="../assets/js/index.js"></script>
 			<script src="../assets/js/main.js"></script>
