--- a/ru/startups.html
+++ b/ru/startups.html
@@ -140,15 +140,13 @@
             <div class="dropdown-menu__content langs__submenu">
               <ul class="langs__list">
                 <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../en/startups.html">EN</a></li>
-                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="#">CS</a></li>
+                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../cs/startups.html">CS</a></li>
               </ul>
             </div>
           </li>
         </ul>
       </div>
     </nav>
-
-
     <main>
       <section class="section__startups">
         <div class="startups__wrapper">
@@ -209,8 +207,7 @@
           </ul>
         </div>
         <div class="footer__download-links">
-          <h2 class="footer__title color_grey">Мы не будем менять мир.<br> 
-Мы перепишем код.</h2>
+          <h2 class="footer__title color_grey">Мы не будем менять мир.<br> Мы перепишем код.</h2>
           <ul class="footer__download-links-list">
             <li class="footer__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="footer__download-link button button_theme_dark button_type_android">Скачать на Android </a></li>
             <li class="footer__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="footer__download-link button button_theme_dark button_type_ios">Скачать на iOS</a></li>
